display/web_book/webbook-common.css
/* ... */
.tiny {
  font-size: var(--tiny);
}
 
.xx-small {
  font-size: var(--xx-small);
}
    
.x-small {
  font-size: var(--x-small);
}
    
.small {
  font-size: var(--small);
}
 
.normal {
  font-size: var(--normal);
}

.large {
  font-size: var(--large);
}

.x-large {
  font-size: var(--x-large);
}

.xx-large {
  font-size: var(--xx-large);
}

.huge {
  font-size: var(--huge);
}

.x-huge {
  font-size: var(--x-huge);
}


.site-title {
  font-size: var(--xx-large);
  text-align: center;
/*  padding: 14.52pt 0 1em;
  padding: var(--onelineskip) 0 1em;
  */
  margin: 24pt 0 1em;
  margin: var(--two-lineskip) 0 1em;
  
}




/** Layouts */
/* Paper sizes 
 * The paper-stock-inner-xxx set are to space paper-stock liners. They
 * differ only in that they have no default color property.
 * WARNING: if you use the paper-stock-inner-xxx margins, they should be
 * set on a liner container, not the paper container.
 */
.paper-stock, .paper-web, .paper-cols, .paper-a4, .paper-column {
  background-color: white;
}

/* Full width presentations like site headers and footers 
 * (not for reading/phrasal text) 
 */
.paper-stock {
  display: block;
}

/* Designed for a sidecol */
.paper-stock-inner-margins-cols, .paper-cols {
  max-width: 77rem;
  margin: 0 auto;
}

/* Full width text (no cols) 
 * This is narrowed a to make a readable linelength. Which makes no 
 * difference to responsiveness, since columns are not involved,
 * and the margin break is narrower (on column-width) anyhow.
 */
.paper-stock-inner-margins-web, .paper-web {
  max-width: 54rem;
  margin: 0 auto;
}

/* A4 width text (no cols) */
.paper-stock-inner-margins-a4, .paper-a4 {
  max-width: 210mm;
  margin: 0 auto;
}

/* Column width text (no cols) */
.paper-stock-inner-margins-column, .paper-column {
  max-width: 44rem;
  margin: 0 auto;
}


/* Margins */
/* Papers and cols will have a margin theme, expressed as padding.
 * Whatever that is, this is the responsive solution
 */
.margins-narrower {
  padding: 1rem 5rem 2rem;
}

.margins-narrow {
  padding: 1rem 7rem 2rem;
}

.margins-normal {
  padding: 1rem 9rem 2rem;
}

.margins-wide {
  padding: 1rem 10rem 2rem;
}

.margins-wider {
  padding: 1rem 11rem 2rem;
}
 
/* TODO: These are overrun by later margin themes */
/* Less than page width.
*/
/* Less than narrow/column sizes */    
@media screen and (max-width: 44rem) {
  /* Make left/right padding narrow.
   * Trim top/extend bottom a little
   * (these are the papers and cols that carry text margins)
   */
  .paper-web, 
  .paper-a4, 
  .paper-column, 
  .col-2, 
  .col-5 {
    padding-left: var(--responsive-border);
    padding-right: var(--responsive-border);
    padding-top: var(--twothird-lineskip);
    padding-bottom: var(--one-lineskip);
  }
}

/* layouts */

/*
.print-fixed-margin-mdvl {
    padding: 6rem 6rem 9rem 6rem;
}

.print-fixed-margin-iso {
    padding: 6rem 6rem 12rem 6rem;
}
*/


/* TOCONSIDER */
/* containers */
.col-fixed-margin-vertical {
    padding: 8rem 0;
}

.col-2,.col-5 {
  display: block;
}

/* if wider than paper, horizontal layouts horizontal */
@media screen and (min-width: 77rem) {

  /* contained elements */
  .col-2 {
    display: inline-block;
    width: 21.5rem;
    vertical-align: top;
  }

  .col-5 {
    display: inline-block;
    width: 55rem;
    vertical-align: top;
  }
}




/********************
 * Common
********************/


/* Headlines */

/* assert bold on all */
h1, h2, h3, h4, h5, h6 {
  font-weight:bold;
}

/* Chapterstyles */
/* bianchi, bringhurst, brotherton, chappel, culver, dash, 
 * demo2, ell, Ger,lyhne, madsen, pedersen, southall, 
 * thatcher, veelo, verville, demo3 */

/* midchapskip only used for inserting vertical numbering. 
 * Ignoring nubering */
html {
  --beforeskip: 50pt;
  --midchapskip: 20pt;
  --afterskip: 40pt;
}

/* default */
h1 {
  font-size: 30pt; 
  font-size: var( --x-huge);
  margin: 50pt 0 40pt;
  margin: var(--beforeskip) 0 var(--afterskip);
}


/* The basic styles are default, section, hangnum, companion, article, 
 * reparticle */
/* The basic styles are mainly concerned with numeric positioning. 
 * However, companion is right-aligned, and article is smaller */

h1.companion {
  text-align: right;
}

h1.article {
  --beforeskip: 3.5ex;
  --afterskip:2.3ex;
  font-size: var(--x-large);
  margin: var(--beforeskip) 0 var(--afterskip);
}
 
/* chapterhead styles */
/* 
 * bianchi, bringhurst, crosshead, default, dowding, komalike, memman, 
 * niglike, tandh, and wilsondob
 * 
 * The chapter titles bianchi, chappell, culver, demo3, southall,
 * have no corresponding title sets.
 *
 * A few missing. brotherton too simple, thatcher too complex, others 
 * use graphics packages.
 */
 
/* Crude fallback for headline padding  
 * Note that some styles don't use the padding.
 * And fallbacks assume default margins
 */
.bianchi, .bringhurst,  chappell,.demo3, .southall {
  padding: 14.52pt 0;
}

.bianchi {
  font-family: sans;
  text-align: center;
  padding-top:var(--onelineskip);
  border-top: solid black 1px;
  padding-bottom: var(--onelineskip);
  border-bottom: solid black 1px;
}

.bringhurst {
  font-size: var( --x-large);
  text-transform: lowercase;
  font-weight: normal;
  font-variant: small-caps;
  padding-bottom: var(--onelineskip);
  border-bottom: solid black 1px;
  margin-bottom: var(--onelineskip);
}

.chappell {
  font-size: var( --x-large);
  font-weight: normal;
  font-style: italic;
  text-align: center;
  padding-top: var(--onelineskip);
  border-top: solid black 1px;
}

/* Biblical style */
/* Our usage= article, centred */
.culver {
  --beforeskip: 3.5ex;
  --afterskip:2.3ex;
  font-size: var(--x-large);
  text-align: center;
  margin: var(--beforeskip) 0 var(--afterskip);
}

.crosshead {
  --beforeskip: var(--two-lineskip);
  --afterskip: var(--two-lineskip);
  font-size: var(--xx-large);
  text-align: center;  
  margin: var(--beforeskip) 0 var(--afterskip);
}

/* Too hard for now */
.dash {}
/* ... */

